--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300&family=Play:wght@700&family=Space+Mono&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="/CSS/style.css">
 
     <!-- Fontawsome -->
 
@@ -76,7 +76,7 @@
     <div id="title-container" class="section-padding">
       <div class="row align-items-center">
         <div class="col-lg-5" style="height: 100%;">
-          <img data-aos="fade-down" data-aos-delay="200" src="images/Albin_ReSize400.png" class="profile-photo" alt="profile-image">
+          <img data-aos="fade-down" data-aos-delay="200" src="/images/Albin_ReSize400.png" class="profile-photo" alt="profile-image">
         </div>
         <div class="col-lg-6">
           <h1 data-aos="fade-up" class="title">Albin Bajrami</h1> <br>
@@ -502,7 +502,7 @@
  
  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
- <script src="JS/app.js"></script>
+ <script src="/JS/app.js"></script>
 
 
 
