--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300&family=Play:wght@700&family=Space+Mono&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 
     <!-- Fontawsome -->
 
@@ -499,7 +499,7 @@
           <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
           <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
           <!-- JS -->
-          <script src="/JS/app.js"></script>
+          <script src="JS/app.js"></script>
      </body>
 </html>
 
