--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
     <div id="title-container" class="section-padding">
       <div class="row align-items-center">
         <div class="col-lg-5" style="height: 100%;">
-          <img data-aos="fade-down" data-aos-delay="200" src="/Albin_ReSize400.png" class="profile-photo" alt="profile-image">
+          <img data-aos="fade-down" data-aos-delay="200" src="Albin_ReSize400.png" class="profile-photo" alt="profile-image">
         </div>
         <div class="col-lg-6">
           <h1 data-aos="fade-up" class="title">Albin Bajrami</h1> <br>
