--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <a class="nav-link text-light" href="#skillscontainer">SKILLS</a> 
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light" href="#pubblicationscontainer">PUBBLICATIONS</a> 
+              <a class="nav-link text-light" href="#pubblicationscontainer">PUBLICATIONS</a> 
           </li>
                     <li class="nav-item">
                         <a class="nav-link text-light" href="#contactme">CONTACT ME</a> 
@@ -85,7 +85,7 @@
           <p data-aos="fade-up" data-aos-delay="200">I am a mechanical engineer currently pursuing 
             the Ph.D. program of national  interest in Robotics and Intelligent Machines (DRIM). </p>
             <a href="#contactme" class="tech-button" data-aos="fade-up" data-aos-delay="300" style="display: inline-block; text-decoration: none; line-height: 2.5em; text-align: center;">CONTACT ME</a>
-            <a href="#pubblicationscontainer" class="tech-button" data-aos="fade-up" data-aos-delay="400" style="display: inline-block; text-decoration: none; line-height: 2.5em; text-align: center;">PUBBLICATIONS</a>            
+            <a href="#pubblicationscontainer" class="tech-button" data-aos="fade-up" data-aos-delay="400" style="display: inline-block; text-decoration: none; line-height: 2.5em; text-align: center;">PUBLICATIONS</a>            
         </div>
       </div>
     </div>
@@ -432,7 +432,7 @@
 
 <section id="pubblicationscontainer">
 <div  id="pubblication" class="section-padding">
-  <h2>Pubblications</h2>
+  <h2>Publications</h2>
   <h3 style="font-size: 30px; font-weight: bolder; color: #3bba9c;">A Proposal for a Simplified Systematic Procedure for the Selection of Electric Motors for Land Vehicles, with an Emphasis on Fuel Economy</h3>
     <p style="font-weight: bold;">Albin Bajrami, Professor Matteo Claudio Palpacelli </p>
     <p>In this study, a preliminary method for the selection of electric motors in electric vehicles is proposed, emphasizing the importance of considering vehicle range from the beginning of the design process. The paper highlights the importance of smoothing the sampled data of driving cycles and presents a method for obtaining approximate efficiency maps of the electric motor. It also analyzes how the total gear ratio affects the vehicle's energy consumption.</p>
