--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
      <!-- Bootstrap -->
@@ -16,7 +17,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Assistant:wght@300&family=Play:wght@700&family=Space+Mono&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style.css">
 
     <!-- Fontawsome -->
 
@@ -58,7 +59,7 @@
                 <a class="nav-link text-light" href="#skillscontainer">SKILLS</a> 
             </li>
             <li class="nav-item">
-              <a class="nav-link text-light" href="#pubblicationscontainer">PUBLICATIONS</a> 
+              <a class="nav-link text-light" href="#pubblicationscontainer">PUBBLICATIONS</a> 
           </li>
                     <li class="nav-item">
                         <a class="nav-link text-light" href="#contactme">CONTACT ME</a> 
@@ -76,7 +77,7 @@
     <div id="title-container" class="section-padding">
       <div class="row align-items-center">
         <div class="col-lg-5" style="height: 100%;">
-          <img data-aos="fade-down" data-aos-delay="200" src="Albin_ReSize400.png" class="profile-photo" alt="profile-image">
+          <img data-aos="fade-down" data-aos-delay="200" src="images/Albin_ReSize400.png" class="profile-photo" alt="profile-image">
         </div>
         <div class="col-lg-6">
           <h1 data-aos="fade-up" class="title">Albin Bajrami</h1> <br>
@@ -85,7 +86,7 @@
           <p data-aos="fade-up" data-aos-delay="200">I am a mechanical engineer currently pursuing 
             the Ph.D. program of national  interest in Robotics and Intelligent Machines (DRIM). </p>
             <a href="#contactme" class="tech-button" data-aos="fade-up" data-aos-delay="300" style="display: inline-block; text-decoration: none; line-height: 2.5em; text-align: center;">CONTACT ME</a>
-            <a href="#pubblicationscontainer" class="tech-button" data-aos="fade-up" data-aos-delay="400" style="display: inline-block; text-decoration: none; line-height: 2.5em; text-align: center;">PUBLICATIONS</a>            
+            <a href="#pubblicationscontainer" class="tech-button" data-aos="fade-up" data-aos-delay="400" style="display: inline-block; text-decoration: none; line-height: 2.5em; text-align: center;">PUBBLICATIONS</a>            
         </div>
       </div>
     </div>
@@ -192,10 +193,8 @@
               <h4 class="fw-bold " style="color: #3bba9c;">Ph.D. at University Polytechinc of Marche</h5>
               <div>
               <p>In my doctoral journey, I have consolidated a number of personal characteristics that have enabled me to achieve my goals. My dedication to supervising term papers, meeting deadlines, and ability to publish independently reflect my commitment and responsibility to the field of research. </p>
-
-                <p>My ability to work in teams and organize work effectively demonstrates my flexibility and ability to adapt to different situations. My passion for learning and curiosity to keep abreast of the latest trends and developments in the field represent my openness to innovation and proactive spirit.</p>
-                
-                <p>These characteristics allow me to take on new challenges and contribute to the development of new knowledge and technologies in my area of expertise.</p>
+                <p>My ability to work in teams and organize work effectively demonstrates my flexibility and ability to adapt to different situations. My passion for learning and curiosity to keep abreast of the latest trends and developments in the field represent my openness to innovation and proactive spirit.
+                These characteristics allow me to take on new challenges and contribute to the development of new knowledge and technologies in my area of expertise.</p>
               </div>
             </div>
           </div>
@@ -204,10 +203,10 @@
         <div class="">
             <div class="card work-card">
               <h4 class="fw-bold" style="color: #3bba9c;">Reliability engineer at Tecram Srl</h5>
-              <p> I have developed knowledge and skills in the field of reliability engineering, specifically through the utilization of advanced ReliaSoft software tools such as XFRACAS, Weibull++, XFMEA, and BlockSim. </p>
-              <p>Additionally, I have honed my cross-functional work organization skills to effectively collaborate with diverse teams.</p>
-                <p>Furthermore, I have focused on expanding my professional network, actively engaging with individuals from various industries and backgrounds. This has enhanced my understanding of different perspectives and business practices.</p> 
-                <p> In addition to my expertise in reliability engineering, I have delved into the realm of website management and development.  </p>
+              <p> I have developed knowledge and skills in the field of reliability engineering, specifically through the utilization of advanced ReliaSoft software tools such as XFRACAS, Weibull++, XFMEA, and BlockSim. 
+              Additionally, I have honed my cross-functional work organization skills to effectively collaborate with diverse teams.</p>
+                <p>Furthermore, I have focused on expanding my professional network, actively engaging with individuals from various industries and backgrounds. This has enhanced my understanding of different perspectives and business practices.
+            In addition to my expertise in reliability engineering, I have delved into the realm of website management and development.  </p>
             </div>
       </div>
     </div>
@@ -432,7 +431,7 @@
 
 <section id="pubblicationscontainer">
 <div  id="pubblication" class="section-padding">
-  <h2>Publications</h2>
+  <h2>Pubblications</h2>
   <h3 style="font-size: 30px; font-weight: bolder; color: #3bba9c;">A Proposal for a Simplified Systematic Procedure for the Selection of Electric Motors for Land Vehicles, with an Emphasis on Fuel Economy</h3>
     <p style="font-weight: bold;">Albin Bajrami, Professor Matteo Claudio Palpacelli </p>
     <p>In this study, a preliminary method for the selection of electric motors in electric vehicles is proposed, emphasizing the importance of considering vehicle range from the beginning of the design process. The paper highlights the importance of smoothing the sampled data of driving cycles and presents a method for obtaining approximate efficiency maps of the electric motor. It also analyzes how the total gear ratio affects the vehicle's energy consumption.</p>
@@ -493,13 +492,20 @@
 </footer>
 
 
-          <!-- Genera Scripts -->
-          <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-          <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-          <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-          <!-- JS -->
-          <script src="app.js"></script>
-     </body>
+ <!-- JS -->
+
+
+ <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
+ <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+ 
+ <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+
+ <script src="JS/app.js"></script>
+
+
+
+
+</body>
 </html>
 
