--- a/index.html
+++ b/index.html
@@ -491,18 +491,13 @@
   <p style="font-size: 12px;">Design by <a href="https://www.linkedin.com/in/irisfattorini/" style="text-decoration: none; color: white;">Iris</a></p>
 </footer>
 
-
- <!-- JS -->
-     
-     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-
-     <script src="app.js"></script>
-
-
-
+          <!-- Genera Scripts -->
+          <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+          <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+          <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+          <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+          <!-- JS -->
+          <script src="app.js"></script>
 
 </body>
 </html>
