--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 <div  id="pubblication" class="section-padding">
   <h2>Pubblications</h2>
   <h3 style="font-size: 30px; font-weight: bolder; color: #3bba9c;">A Proposal for a Simplified Systematic Procedure for the Selection of Electric Motors for Land Vehicles, with an Emphasis on Fuel Economy</h3>
-    <p style="font-weight: bold;">Albin Bajrami, Professor Matteo Claudio Palpacelli </p>
+    <p style="font-weight: bold;">Albin Bajrami, Matteo Claudio Palpacelli </p>
     <p>In this study, a preliminary method for the selection of electric motors in electric vehicles is proposed, emphasizing the importance of considering vehicle range from the beginning of the design process. The paper highlights the importance of smoothing the sampled data of driving cycles and presents a method for obtaining approximate efficiency maps of the electric motor. It also analyzes how the total gear ratio affects the vehicle's energy consumption.</p>
     <a href="https://www.mdpi.com/2075-1702/11/4/420" class="tech-button" role="button" style="display: inline-block; text-decoration: none; line-height: 2.5em; text-align: center;">GO TO THE ARTICLE</a>
 
